src/App.scss
.App {
    background-color: #282c34;
    min-height: 100vh;
    overflow-x: hidden;
    user-select: none;

    &.true {
        color: red;
    }

    nav {
        height: 47px;
        overflow: none;
        font-size: 14px;

        &.true {
            position: fixed;
            background: #282c34;
            width: 100%;
            z-index: 1;
        }

        .burger {
            cursor: pointer;
            position: absolute;
            width: 50px;
            height: 50px;
            left: 0;
            z-index: 1;
            text-align: center;
        
            div {
                width: 3px;
                height: 29px;
                left: 20px;
                position: absolute;
                background: #4D555F;
                transform: rotate(90deg);
                margin: 0 0 -20px;
                border-radius: 3px;
                transition: ease 0.7s;

                &:first-child {
                    top: 0;
                }

                &:nth-child(2) {
                    top: 9px;
                }
                
                &:last-child {
                    top: 18px;
                }

            }

            &.true {

                div {

                    &:first-child {
                        transform: rotate(45deg);
                        top: 9px;
                    }

                    &:nth-child(2) {
                        transform: rotate(-45deg);
                    }
                    
                    &:last-child {
                        display: none;
                    }
                }
            }

            &.context-true {
                div {

                    &:first-child {
                        transform: rotate(45deg);
                        top: 10px;
                        left: 15px;
                        height: 17px;
                    }

                    &:nth-child(2) {
                        transform: rotate(-45deg);
                        top: 23px;
                        left: 15px;
                        height: 17px;
                    }
                    
                    &:last-child {
                        display: block;
                        top: 10px;
                        left: 22px;
                        height: 30px;
                    }
                }
            }
        }

        ul {
            display: flex;
            justify-content: space-around;
            align-items: center;
            height: 100%;
            margin: 0;

            >div {
                display: flex;
                width: 100%;
                justify-content: space-around;
                align-items: center;
                // left: 50%;
                // transform: translateX(-50%);
                margin: 0;
            }

            li {
                text-align: center;
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                list-style-type: none;
                color: #4D555F;
                cursor: pointer;
                font-weight: bold;

                &.true {
                    border-bottom: 2px #4D555F solid;
                }

                input[type="file"] {
                    display: none;
                }
                .custom-file-upload {
                    display: inline-block;
                    cursor: pointer;
                }

                &.delete {
                    border: 2px #4D555F solid;
                    padding: 3px;
                    border-radius: 10px;
                }
            }
        }
        
        @media (min-width: 768px) {
            font-size: 18px;

            .burger {
                div {
                    width: 3px;
                    height: 29px;
                    left: 30px;
                }
            }
        }
    }
 
    
    .main {

        &.true {
            margin-top: 47px;
        } 

        .img-container {
            display: flex;
            flex-flow: row wrap;
            align-items: flex-start;
            justify-content: center;
            padding: 0 5px 5px;
            margin: 0 auto;

            .img-wrapper {
                display: flex;
                width: calc(33% - 10px);
                flex-flow: column wrap;
                align-items: center;
                justify-content: space-between;
                height: 100%;
                
                &:nth-child(even) {
                    margin: 0 10px;
                }
                
                .image {
                    width: 100%;
                    margin: 0 0 5px;
                    position: relative;

                    img {
                        width: 100%;
                    }

                    &.true {

                        &::before, &::after {
                            content: "";
                            display: inline-block;
                            position: absolute;
                        }

                        &::before {
                            height: 25px;
                            width: 25px;
                            left: 3px;
                            top: 3px;
                            border: 1px solid #4D555F;
                            background: #282c34;
                            border-radius: 50%;
                        }

                        &::after {
                            height: 6px;
                            width: 14px;
                            left: 9px;
                            top: 10px;
                            border-left: 2px solid #4D555F;
                            border-bottom: 2px solid #4D555F;
                            transform: rotate(-45deg);
                        }
                    }
                }
            }
        }
    }

    .modal {
        top: 0;
        z-index: 1;
        width: 100%;
        height: 100%;
        display: flex;
        flex-flow: row wrap;
        position: fixed;
        align-items: center;
        justify-content: center;
        background: rgba(0, 0, 0, 0.5);

        img {
            max-height: 100%;
            max-width: 100%;
            min-height: 40%;
            object-fit: contain;
            align-self: center;
        }
    }

  
    // Accounts for scroll wheel on desktop.
    @media (min-width: 768px) {
        .main {
            .img-container {
                padding: 0 17px 17px;
                
                img {
                    width: 100%;
                    margin: 10px 0;
        
                    &:first-child {
                        margin: 0 0 10px;
                    }
                }
    
                .img-wrapper {
                    width: calc(33% - 12px);
    
                    &:nth-child(even) {
                        margin: 0 20px;
                    }
                }
            }

        }
    }
}

